Implementada funcionalidad para eliminar dispositivos y plataformas. Modificado la casilla tipo para cuando añadimos una plataforma.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -39,7 +39,7 @@
       <span>+ Add Device</span>
     </div>
     <div class="button-header"
-         ng-class="{ 'button-header-active' : ('main.device_manager.add_device' | routeSegmentStartsWith) }"
+         ng-class=""
          ng-click="">
       <span>+ Add Service</span>
     </div>
