Partial commit. Implementing platform servlet in frontend

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -224,6 +224,7 @@
 <script src="scripts/dev/services/dev_client_service.js"></script>
 <script src="scripts/dev/services/dev_platform_service.js"></script>
 <script src="scripts/dev/services/dev_device_service.js"></script>
+<script src="scripts/dev/services/dev_deployment_service.js"></script>
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
@@ -244,6 +245,7 @@
 <script src="scripts/controllers/add_maintenance_controller.js"></script>
 <script src="scripts/controllers/maintenance_info_controller.js"></script>
 <script src="scripts/controllers/update_maintenance_controller.js"></script>
+<script src="scripts/controllers/platform_info_controller.js"></script>
 
 <script src="scripts/services/platform_service.js"></script>
 <script src="scripts/services/device_service.js"></script>
