Platform develop module implemented

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -155,7 +155,8 @@
                 ('main.component_configurator.component_view.add_service' | routeSegmentEqualsTo) ||
                 ('main.component_configurator.component_view.platform_info' | routeSegmentEqualsTo) ||
                 ('main.component_configurator.component_view.device_info' | routeSegmentEqualsTo) ||
-                ('main.component_configurator.component_view.update_device' | routeSegmentEqualsTo)">
+                ('main.component_configurator.component_view.update_device' | routeSegmentEqualsTo) ||
+                ('main.component_configurator.component_view.update_platform' | routeSegmentEqualsTo)">
   </div>
 
   <div class="left-div-50"
