Completed development module for maintenance panel. - Added examples of loading messages.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -226,6 +226,7 @@
 <script src="scripts/dev/services/dev_platform_service.js"></script>
 <script src="scripts/dev/services/dev_device_service.js"></script>
 <script src="scripts/dev/services/dev_deployment_service.js"></script>
+<script src="scripts/dev/services/dev_record_service.js"></script>
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
