--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet">
   <!-- endbuild -->
 </head>
-<body ng-app="activageDashboardAppDev" ng-controller="rootCtrl as root">
+<body ng-app="activageDashboardApp" ng-controller="rootCtrl as root">
 
 <!-- Add your site or application content here -->
 <header>
