--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -193,6 +193,10 @@
 
 </div>
 
+<div ng-controller="updateManagerCtrl as updateCtrl">
+  <p>Prueba</p>
+</div>
+
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
 <script>
@@ -232,6 +236,7 @@
 <script src="scripts/dev/services/dev_device_service.js"></script>
 <script src="scripts/dev/services/dev_deployment_service.js"></script>
 <script src="scripts/dev/services/dev_record_service.js"></script>
+<script src="scripts/dev/services/dev_registry_service.js"></script>
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
@@ -254,6 +259,7 @@
 <script src="scripts/controllers/maintenance_info_controller.js"></script>
 <script src="scripts/controllers/update_maintenance_controller.js"></script>
 <script src="scripts/controllers/platform_info_controller.js"></script>
+<script src="scripts/controllers/update_manager_controller.js"></script>
 
 <script src="scripts/services/platform_service.js"></script>
 <script src="scripts/services/device_service.js"></script>
@@ -273,6 +279,11 @@
 <script src="scripts/services/record_service_data.js"></script>
 <script src="scripts/services/record_service_api.js"></script>
 <script src="scripts/services/record_service.js"></script>
+
+<script src="scripts/services/registry_service_data.js"></script>
+<script src="scripts/services/registry_service_api.js"></script>
+<script src="scripts/services/registry_service.js"></script>
+
 
 <script src="scripts/constants/backend_constants.js"></script>
 
