Small improvements update-manager frontend

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,6 +17,7 @@
   <!-- endbuild -->
 </head>
 <body ng-app="activageDashboardAppDev" ng-controller="rootCtrl as root">
+<!--<body ng-app="activageDashboardApp" ng-controller="rootCtrl as root">-->
 
 <!-- Add your site or application content here -->
 <header>
