--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
@@ -16,8 +16,8 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet">
   <!-- endbuild -->
 </head>
-<body ng-app="activageDashboardAppDev" ng-controller="rootCtrl as root">
-<!--<body ng-app="activageDashboardApp" ng-controller="rootCtrl as root">-->
+<!--<body ng-app="activageDashboardAppDev" ng-controller="rootCtrl as root">-->
+<body ng-app="activageDashboardApp" ng-controller="rootCtrl as root">
 
 <!-- Add your site or application content here -->
 <header>
