--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,13 +8,17 @@
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet">
   <!-- endbuild -->
+
+  <script src="scripts/keycloak.js"></script>
+  <script src="scripts/keycloak-authz.js"></script>
+
 </head>
 <!--<body ng-app="activageDashboardAppDev" ng-controller="rootCtrl as root">-->
 <body ng-app="activageDashboardApp" ng-controller="rootCtrl as root">
@@ -239,7 +243,6 @@
 <script src="bower_components/ng-showdown/dist/ng-showdown.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
-
 <script src="scripts/app_dev.js"></script>
 <script src="scripts/dev/config/net_delay_config.js"></script>
 <script src="scripts/dev/services/dev_utils.js"></script>
@@ -252,6 +255,9 @@
 <script src="scripts/dev/services/dev_registry_service.js"></script>
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
+<script src="scripts/identity.js"></script>
+<script src="scripts/jwt-decode.min.js"></script>
+
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/root_controller.js"></script>
 <script src="scripts/controllers/about_controller.js"></script>
