Improved frontend docker and fix errors

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,7 +21,7 @@
 
 </head>
 <!--<body ng-app="activageDashboardAppDev" ng-controller="rootCtrl as root">-->
-<body ng-app="activageDashboardApp" ng-controller="rootCtrl as root">
+<body ng-controller="rootCtrl as root">
 
 <!-- Add your site or application content here -->
 <header>
