--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -283,16 +283,16 @@
 <script src="scripts/identity.js"></script>
 <script src="scripts/jwt-decode.min.js"></script>
 
-<script src="scripts/app_dev.js"></script>
-<script src="scripts/dev/config/net_delay_config.js"></script>
-<script src="scripts/dev/services/dev_utils.js"></script>
-<script src="scripts/dev/services/dev_record_service.js"></script>
-<script src="scripts/dev/services/dev_client_service.js"></script>
-<script src="scripts/dev/services/dev_platform_service.js"></script>
-<script src="scripts/dev/services/dev_device_service.js"></script>
-<script src="scripts/dev/services/dev_deployment_service.js"></script>
-<script src="scripts/dev/services/dev_record_service.js"></script>
-<script src="scripts/dev/services/dev_registry_service.js"></script>
+<!--<script src="scripts/app_dev.js"></script>-->
+<!--<script src="scripts/dev/config/net_delay_config.js"></script>-->
+<!--<script src="scripts/dev/services/dev_utils.js"></script>-->
+<!--<script src="scripts/dev/services/dev_record_service.js"></script>-->
+<!--<script src="scripts/dev/services/dev_client_service.js"></script>-->
+<!--<script src="scripts/dev/services/dev_platform_service.js"></script>-->
+<!--<script src="scripts/dev/services/dev_device_service.js"></script>-->
+<!--<script src="scripts/dev/services/dev_deployment_service.js"></script>-->
+<!--<script src="scripts/dev/services/dev_record_service.js"></script>-->
+<!--<script src="scripts/dev/services/dev_registry_service.js"></script>-->
 
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/root_controller.js"></script>
